// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI create FRONTITY_NAME='test-project'; frontity create --no-prompt 1`] = `
Object {
  "name": "test-project",
  "theme": undefined,
  "typescript": false,
}
`;

exports[`CLI create FRONTITY_TYPESCRIPT='true'; frontity create 'test-project' --no-prompt 1`] = `
Object {
  "name": "test-project",
  "theme": undefined,
  "typescript": true,
}
`;

exports[`CLI create frontity create 'test-project' --theme 'test-theme' 1`] = `
Object {
  "name": "test-project",
  "theme": "test-theme",
  "typescript": true,
}
`;

exports[`CLI create frontity create 'test-project' --typescript 1`] = `
Object {
  "name": "test-project",
  "theme": undefined,
  "typescript": true,
}
`;

exports[`CLI create frontity create 'test-project' 1`] = `
Object {
  "name": "test-project",
  "theme": "test-theme",
  "typescript": false,
}
`;

exports[`CLI create frontity create 1`] = `
Array [
  Array [
    Array [
      Object {
        "default": "my-frontity-project",
        "message": "Enter a name for the project:",
        "name": "name",
        "type": "input",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "default": "@frontity/mars-theme",
        "message": "Enter a starter theme to clone:",
        "name": "theme",
        "type": "input",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "default": false,
        "message": "Do you want to receive framework updates by email?",
        "name": "subscribe",
        "type": "confirm",
      },
      Object {
        "message": "Please, enter your email:",
        "name": "email",
        "type": "input",
        "when": [Function],
      },
    ],
  ],
]
`;
